--- a/index.html
+++ b/index.html
@@ -37,47 +37,7 @@
       <div class="weather-app-temp-unit">°C</div>
       </div>
       </div>
-      <div class="weather-forecast">
-        <div class="weather-forecast-day"> 
-          <div class="weather-forecast-date">Tue</div> 
-          <div class="weather-forecast-icon">🌤️</div> 
-          <div class="weather-forecast-temps">
-          <div class="weather-forecast-temp"><strong>15°</strong></div>
-          <div class="weather-forecast-temp">9°</div>
-      </div>
-        </div>
-         <div class="weather-forecast-day"> 
-          <div class="weather-forecast-date">Wed</div> 
-          <div class="weather-forecast-icon">🌤️</div> 
-          <div class="weather-forecast-temps">
-          <div class="weather-forecast-temp"><strong>15°</strong></div>
-          <div class="weather-forecast-temp">9°</div>
-      </div>
-        </div>
-         <div class="weather-forecast-day"> 
-          <div class="weather-forecast-date">Thu</div> 
-          <div class="weather-forecast-icon">🌤️</div> 
-          <div class="weather-forecast-temps">
-          <div class="weather-forecast-temp"><strong>15°</strong></div>
-          <div class="weather-forecast-temp">9°</div>
-      </div>
-        </div>
-         <div class="weather-forecast-day"> 
-          <div class="weather-forecast-date">Fri</div> 
-          <div class="weather-forecast-icon">🌤️</div> 
-          <div class="weather-forecast-temps">
-          <div class="weather-forecast-temp"><strong>15°</strong></div>
-          <div class="weather-forecast-temp">9°</div>
-      </div>
-        </div>
-         <div class="weather-forecast-day"> 
-          <div class="weather-forecast-date">Sat</div> 
-          <div class="weather-forecast-icon">🌤️</div> 
-          <div class="weather-forecast-temps">
-          <div class="weather-forecast-temp"><strong>15°</strong></div>
-          <div class="weather-forecast-temp">9°</div>
-      </div>
-        </div>
+      <div class="weather-forecast" id="forecast"></div>
     </main>
 
     <footer>
